bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:1: error: Missing closing brace `}' assumed here
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
^PosNeg:1: error: expected class or object definition
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
^